uologin (0.5) unstable; urgency=low

  * user_database: fix assertion failure with GCC 15
  * allow cancellation while not reading from client

 --   

uologin (0.4) unstable; urgency=low

  * fix malformed REMOTE_IP packet header
  * send AccountLoginReject on password mismatch

 -- Max Kellermann <max.kellermann@gmail.com>  Thu, 02 Jan 2025 17:23:26 +0100

uologin (0.3) unstable; urgency=low

  * add Prometheus exporter

 -- Max Kellermann <max.kellermann@gmail.com>  Sun, 29 Dec 2024 00:45:01 +0100

uologin (0.2) unstable; urgency=low

  * add option "auto_reload_user_database"
  * log accepted passwords to systemd journal
  * log connect errors
  * implement server list

 -- Max Kellermann <max.kellermann@gmail.com>  Sat, 28 Dec 2024 09:52:30 +0100

uologin (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <max.kellermann@gmail.com>  Fri, 27 Dec 2024 21:15:28 +0100